<resources>
    <string name="app_name">Drug Identifier</string>
    <string name="take_picture">Capture</string>
    <string name="recognized_text_placeholder">Point camera at medication label</string>
    <string name="ingredients_added">%s added.</string>
    <string name="no_known_ingredients_found">No known ingredients found.</string>
    <string name="current_drugs">Current Drugs: %s</string>
    <string name="no_interactions_found">No interactions found.</string>
    <string name="interaction_warning">Interaction: %1$s + %2$s - %3$s</string>
    <string name="checking_for_interactions">Checking for interactions...</string>
    
    <!-- Home Screen Strings -->
    <string name="welcome_message">Welcome Back!</string>
    <string name="top_section_placeholder">Content will be added here</string>
    <string name="actions_title">Quick Actions</string>
    <string name="action_scan_drug">Scan</string>
    <string name="action_add_drug">Add Medication</string>
    <string name="action_view_drugs">My Drugs</string>
    <string name="action_check_interactions">Interactions</string>
    <string name="my_medications_title">My Medications</string>
    <string name="no_drugs_yet">No medications yet</string>
    <string name="add_drug_hint">Start by scanning or adding your first medication</string>
    <string name="delete_drug_confirmation">Delete %s?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Content Descriptions -->
    <string name="back_button_description">Back button</string>
    <string name="warning_icon_description">Warning icon</string>
    <string name="arrow_icon_description">Arrow icon</string>
    <string name="medications_icon_description">Medications icon</string>

    <!-- View Drugs Screen -->
    <string name="drug_count_default">0</string>
    <string name="check_for_interactions">Check for Interactions</string>
    <string name="no_medications_yet">No medications yet</string>
    <string name="add_first_medication_prompt">Add your first medication to get started</string>
</resources>